--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id "org.jlleitschuh.gradle.ktlint" version "10.2.1"
+    id "io.gitlab.arturbosch.detekt" version "1.19.0"
 
 }
 
@@ -43,16 +44,24 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
+        kotlinCompilerVersion '1.5.31'
     }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    detekt {
+        autoCorrect = true
+        toolVersion = "1.19.0"
+        config = files("$rootDir/config/detekt/detekt.yml")
+        buildUponDefaultConfig = true
+    }
 }
 
 dependencies {
+
+    detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:1.19.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -68,8 +77,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
 
-    def lifecycle_version = "2.4.0-alpha03"
-    def arch_version = "2.1.0"
+    def lifecycle_version = "2.4.0"
 
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
@@ -89,14 +97,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2")
 
     implementation "com.google.accompanist:accompanist-placeholder-material:0.16.1"
     implementation 'com.google.accompanist:accompanist-pager:0.24.1-alpha'
     implementation "com.google.accompanist:accompanist-drawablepainter:0.16.1"
+
     implementation("io.coil-kt:coil:1.3.2")
     implementation("io.coil-kt:coil-compose:1.3.2")
+
     implementation 'androidx.activity:activity-compose:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
