--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.31'
+        kotlinCompilerExtensionVersion "1.1.0"
+        kotlinCompilerVersion '1.6.10'
     }
     packagingOptions {
         resources {
@@ -62,7 +62,7 @@ android {
 dependencies {
 
     detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:1.19.0"
-
+    def compose_version = "1.1.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -72,12 +72,12 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation("androidx.compose.ui:ui-util:$compose_version")
 
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
 
-    def lifecycle_version = "2.4.0"
+    def lifecycle_version = "2.4.1"
 
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
@@ -92,8 +92,8 @@ dependencies {
 
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
 
-    implementation("androidx.navigation:navigation-compose:2.5.0-alpha01")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha01")
+    implementation("androidx.navigation:navigation-compose:2.5.0-alpha02")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha02")
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
@@ -108,7 +108,8 @@ dependencies {
     implementation("io.coil-kt:coil-compose:1.3.2")
 
     implementation 'androidx.activity:activity-compose:1.4.0'
-    testImplementation 'junit:junit:4.+'
+    debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
