--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ android {
             useSupportLibrary true
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 
     buildTypes {
         release {
@@ -74,6 +79,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
     detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:1.19.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -90,7 +96,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
 
-    def lifecycle_version = "2.5.0-alpha02"
+    def lifecycle_version = "2.5.0-alpha03"
 
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
@@ -103,15 +109,16 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
+
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
 
-    implementation("androidx.navigation:navigation-compose:2.5.0-alpha02")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha02")
+    implementation("androidx.navigation:navigation-compose:2.5.0-alpha03")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha03")
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2")
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
 
     implementation "com.google.accompanist:accompanist-placeholder-material:0.16.1"
     implementation 'com.google.accompanist:accompanist-pager:0.24.1-alpha'
@@ -124,8 +131,17 @@ dependencies {
     debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
     releaseImplementation "com.github.chuckerteam.chucker:library-no-op:3.5.2"
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+
+
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'app.cash.turbine:turbine:0.7.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
