--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,7 +109,10 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
-
+    testImplementation "io.mockk:mockk:1.12.3"
+    testImplementation "io.mockk:mockk-agent-jvm:1.12.3"
+    androidTestImplementation "io.mockk:mockk-android:1.12.3"
+    androidTestImplementation "io.mockk:mockk-agent-jvm:1.12.3"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
 
     implementation("androidx.navigation:navigation-compose:2.5.0-alpha03")
