--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ android {
         config = files("$rootDir/config/detekt/detekt.yml")
         buildUponDefaultConfig = true
     }
+    namespace 'com.emreerkahraman.movieappcompose'
 }
 
 
@@ -84,7 +85,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -96,7 +97,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
 
-    def lifecycle_version = "2.5.0-alpha03"
+    def lifecycle_version = "2.5.0-rc01"
 
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
@@ -105,27 +106,26 @@ dependencies {
     // Lifecycles only (without ViewModel or LiveData)
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
 
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    kapt "com.google.dagger:hilt-compiler:2.38.1"
+    implementation "com.google.dagger:hilt-android:2.41"
+    kapt "com.google.dagger:hilt-compiler:2.41"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     testImplementation "io.mockk:mockk:1.12.3"
     testImplementation "io.mockk:mockk-agent-jvm:1.12.3"
     androidTestImplementation "io.mockk:mockk-android:1.12.3"
     androidTestImplementation "io.mockk:mockk-agent-jvm:1.12.3"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
 
-    implementation("androidx.navigation:navigation-compose:2.5.0-alpha03")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha03")
+    implementation("androidx.navigation:navigation-compose:2.5.0-rc01")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01")
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
-    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
 
     implementation "com.google.accompanist:accompanist-placeholder-material:0.16.1"
     implementation 'com.google.accompanist:accompanist-pager:0.24.1-alpha'
-    implementation "com.google.accompanist:accompanist-drawablepainter:0.16.1"
+    implementation "com.google.accompanist:accompanist-drawablepainter:0.23.1"
 
     implementation("io.coil-kt:coil:1.3.2")
     implementation("io.coil-kt:coil-compose:1.3.2")
